[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/GUI/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Src/Screens/LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://Assets/meshes/terrain.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Src/Characters/RandomCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Level/tree2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=6]
[ext_resource path="res://Src/GUI/LevelSelector.tscn" type="PackedScene" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.294118, 0.615686, 0.113725, 1 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1, 1.15697, 1.5, 1.7, 1.8, 1.9, 2, 3, 3.2, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.269415, 0.952583, 1.02803 ), Vector3( -1.34707, 0, 5.14016 ), Vector3( -3.35439, 0, 6.57234 ), Vector3( -4.43984, 0.120181, 5.54068 ), Vector3( -6.81189, 0, 3.28617 ), Vector3( -6.77064, -0.0445175, 1.9717 ), Vector3( -6.75002, 2.12638, 1.31447 ), Vector3( -6.7294, 0.40537, 0.657234 ), Vector3( -6.70878, 0, 2.38419e-07 ), Vector3( -3.35439, 0, -5.0563 ), Vector3( -2.85106, 1.74221, -4.04504 ), Vector3( -2.39016, 0.711853, -3.53941 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3, 3.2, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -3.66099, 0 ), Vector3( 0, -46.7583, 0 ), Vector3( 0, -89.8555, 0 ), Vector3( 0, -139.493, 0 ), Vector3( 0, -176.05, 0 ), Vector3( 0, 88.0735, 0 ), Vector3( 0, 50.0256, 0 ), Vector3( 0, 28.5208, 0 ) ]
}

[node name="LevelSelection" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.33404 )
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.06
anchor_top = 0.446
anchor_right = 0.945
anchor_bottom = 0.662
margin_left = 0.199997
margin_top = -0.119995
margin_right = 0.399902
margin_bottom = 0.359955
custom_constants/separation = 152
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelector" parent="Control/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 169.0
margin_bottom = 156.0

[node name="LevelSelector2" parent="Control/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 321.0
margin_right = 490.0
margin_bottom = 156.0
level_number = 2

[node name="LevelSelector3" parent="Control/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_right = 811.0
margin_bottom = 156.0
level_number = 3

[node name="LevelSelector4" parent="Control/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 963.0
margin_right = 1133.0
margin_bottom = 156.0
level_number = 4

[node name="TutorialCheckbox" type="CheckBox" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -186.0
margin_bottom = 35.0
grow_horizontal = 0
theme = ExtResource( 6 )
pressed = true
text = "Show tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Control"]
margin_left = 35.2778
margin_top = 26.4583
margin_right = 159.278
margin_bottom = 101.458
custom_fonts/font = ExtResource( 1 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.06933e-07, -0.754458, 0.656349, -1.22917e-07, 0.656349, 0.754458, -1, 0, -1.62921e-07, 7.93069, 10.9221, -0.00171828 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 4.24858, 0, -1.75805, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 1 )

[node name="RandomCharacter" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.537642, 0, -0.843173, 0, 1, 0, 0.843173, 0, -0.537642, -5.62987, 0.059887, 4.40961 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RandomCharacter"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="tree2" parent="." instance=ExtResource( 5 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1.82385, 11.0581 )

[node name="tree3" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.855883, 0, -1.80761, 0, 2, 0, 1.80761, 0, -0.855883, -5.74285, -1.82385, 10.0198 )

[node name="tree4" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.36619, 0, 1.46066, 0, 2, 0, -1.46066, 0, -1.36619, -12.3355, -1.82385, 1.467 )

[node name="tree5" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.578164, 0, 1.91461, 0, 2, 0, -1.91461, 0, 0.578164, -8.8045, -1.82385, -14.7097 )

[node name="tree6" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.844793, 0, 1.81282, -0.11607, 1.9959, -0.0540898, -1.8091, -0.128054, -0.84306, -1.57534, -1.82385, -14.7097 )

[node name="tree9" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.29294, 0.0956353, 0.754434, -0.0870525, 1.49692, -0.0405673, -0.755472, -0.00881624, 1.29583, -1.57534, -1.82385, -11.936 )

[node name="tree10" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.228005, 0.0534118, 1.48161, -0.294339, 1.47082, -0.00772683, -1.45306, -0.289556, 0.23405, -1.57534, -1.82385, 8.85033 )

[node name="tree11" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.791086, 0.151664, -1.26538, -0.294339, 1.47082, -0.00772683, 1.23998, 0.252375, 0.805456, -8.99975, -1.82385, 7.24552 )

[node name="tree12" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.3755, -0.119582, -0.586268, -0.15241, 1.49128, 0.0534057, 0.578603, 0.108542, -1.37965, -10.5127, -1.82385, -9.34827 )

[node name="tree13" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.3755, -0.119582, -0.586268, -0.15241, 1.49128, 0.0534057, 0.578603, 0.108542, -1.37965, -10.5127, -1.82385, 4.07974 )

[node name="tree7" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.51854, 0.292939, -1.26816, -0.299296, 1.97506, 0.0978403, 1.26667, 0.11549, 1.54344, -14.4974, -1.82385, -4.98051 )

[node name="tree8" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.9507, -0.311111, 0.313014, -0.299296, 1.97506, 0.0978403, -0.32433, 0.0485866, -1.97293, 1.50263, -1.82385, -13.5462 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.999983, -0.00334803, 0.00468649, -0.00291644, 0.407315, 0.913283, -0.00496658, -0.913281, 0.407299, 0, 8.01053, 19.2894 )
shadow_enabled = true
[connection signal="start_game" from="Control/HBoxContainer/LevelSelector" to="." method="_on_Level1_pressed"]
[connection signal="start_game" from="Control/HBoxContainer/LevelSelector2" to="." method="_on_Level2_pressed"]
[connection signal="start_game" from="Control/HBoxContainer/LevelSelector3" to="." method="_on_Level3_pressed"]
[connection signal="start_game" from="Control/HBoxContainer/LevelSelector4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Control/TutorialCheckbox" to="." method="_on_TutorialCheckbox_pressed"]
[connection signal="focus_entered" from="Control/BackButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="Control/BackButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
